--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".Gameover"></activity>
         <activity android:name=".SubActivity"></activity>
+        <activity android:name=".TutorialActivity"></activity>
     </application>
 
 </manifest>
